--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                     android:id="@+id/tv_user_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="user@example.com"
+                    android:text="Good to see you ☺️"
                     android:textColor="@color/text_secondary"
                     android:textSize="14sp"
                     android:gravity="center" />
