--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Good to see you ☺️"
-                    android:textColor="@color/text_secondary"
+                    android:textColor="@color/on_primary"
                     android:textSize="14sp"
                     android:gravity="center" />
 
