--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -145,9 +145,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="5. Download your enhanced résumé in Word or PDF format"
+                android:text="5. Download your enhanced résumé in Word or PDF format."
                 android:textColor="#333333"
                 android:textSize="14sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="6. No data is stored on our servers after processing."
+                android:textColor="#333333"
+                android:textSize="14sp"/>
+            
+            
         </LinearLayout>
 
     </LinearLayout>
